src/BicepParser.Powershell/parser/bicepParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------



// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class bicepParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		TARGETSCOPE=1, PARAM=2, RESOURCE=3, MODULE=4, OUTPUT=5, EXISTING=6, STRING=7, 
		BOOL=8, INT=9, ARRAY=10, OBJECT=11, COLON=12, ET=13, OPENSQUARE=14, CLOSESQUARE=15, 
		OPENGRAPH=16, CLOSEGRAPH=17, SLASH=18, COMMA=19, OPENPARENTHESIS=20, CLOSEPARENTHESIS=21, 
		POINT=22, EQUAL=23, DOLLAR=24, BOOLEAN=25, NUMBER=26, IDENTIFIER=27, WS=28, 
		OPEN_STRING=29, ESCAPED_APEX=30, ESCAPED_DOLLAR=31, TEXT=32, CLOSE_STRING=33, 
		ENTER_INTERPOLATION=34;
	public const int
		RULE_bicep = 0, RULE_module = 1, RULE_output = 2, RULE_targetScope = 3, 
		RULE_scope = 4, RULE_param = 5, RULE_decorator = 6, RULE_identifier = 7, 
		RULE_type = 8, RULE_resource = 9, RULE_resourceType = 10, RULE_modulePath = 11, 
		RULE_value = 12, RULE_valueExpression = 13, RULE_variable = 14, RULE_function = 15, 
		RULE_functionParameter = 16, RULE_stringValue = 17, RULE_boolValue = 18, 
		RULE_numberValue = 19, RULE_arrayValue = 20, RULE_objectValue = 21, RULE_property = 22, 
		RULE_propertyName = 23;
	public static readonly string[] ruleNames = {
		"bicep", "module", "output", "targetScope", "scope", "param", "decorator", 
		"identifier", "type", "resource", "resourceType", "modulePath", "value", 
		"valueExpression", "variable", "function", "functionParameter", "stringValue", 
		"boolValue", "numberValue", "arrayValue", "objectValue", "property", "propertyName"
	};

	private static readonly string[] _LiteralNames = {
		null, "'targetscope'", "'param'", "'resource'", "'module'", "'output'", 
		"'existing'", "'string'", "'bool'", "'int'", "'array'", "'object'", "':'", 
		"'@'", "'['", "']'", "'{'", "'}'", "'/'", "','", "'('", "')'", "'.'", 
		"'='", "'$'", null, null, null, null, null, "'\\''", "'\\$'", null, null, 
		"'${'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "TARGETSCOPE", "PARAM", "RESOURCE", "MODULE", "OUTPUT", "EXISTING", 
		"STRING", "BOOL", "INT", "ARRAY", "OBJECT", "COLON", "ET", "OPENSQUARE", 
		"CLOSESQUARE", "OPENGRAPH", "CLOSEGRAPH", "SLASH", "COMMA", "OPENPARENTHESIS", 
		"CLOSEPARENTHESIS", "POINT", "EQUAL", "DOLLAR", "BOOLEAN", "NUMBER", "IDENTIFIER", 
		"WS", "OPEN_STRING", "ESCAPED_APEX", "ESCAPED_DOLLAR", "TEXT", "CLOSE_STRING", 
		"ENTER_INTERPOLATION"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "bicepParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static bicepParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public bicepParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public bicepParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class BicepContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TargetScopeContext targetScope() {
			return GetRuleContext<TargetScopeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ResourceContext[] resource() {
			return GetRuleContexts<ResourceContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ResourceContext resource(int i) {
			return GetRuleContext<ResourceContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamContext[] param() {
			return GetRuleContexts<ParamContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamContext param(int i) {
			return GetRuleContext<ParamContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleContext[] module() {
			return GetRuleContexts<ModuleContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleContext module(int i) {
			return GetRuleContext<ModuleContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OutputContext[] output() {
			return GetRuleContexts<OutputContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OutputContext output(int i) {
			return GetRuleContext<OutputContext>(i);
		}
		public BicepContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bicep; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBicep(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BicepContext bicep() {
		BicepContext _localctx = new BicepContext(Context, State);
		EnterRule(_localctx, 0, RULE_bicep);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==TARGETSCOPE) {
				{
				State = 48;
				targetScope();
				}
			}

			State = 55;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 55;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case RESOURCE:
					{
					State = 51;
					resource();
					}
					break;
				case PARAM:
				case ET:
					{
					State = 52;
					param();
					}
					break;
				case MODULE:
					{
					State = 53;
					module();
					}
					break;
				case OUTPUT:
					{
					State = 54;
					output();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 57;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PARAM) | (1L << RESOURCE) | (1L << MODULE) | (1L << OUTPUT) | (1L << ET))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MODULE() { return GetToken(bicepParser.MODULE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModulePathContext modulePath() {
			return GetRuleContext<ModulePathContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUAL() { return GetToken(bicepParser.EQUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ObjectValueContext objectValue() {
			return GetRuleContext<ObjectValueContext>(0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleContext module() {
		ModuleContext _localctx = new ModuleContext(Context, State);
		EnterRule(_localctx, 2, RULE_module);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			Match(MODULE);
			State = 60;
			identifier();
			State = 61;
			modulePath();
			State = 62;
			Match(EQUAL);
			State = 63;
			objectValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OutputContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OUTPUT() { return GetToken(bicepParser.OUTPUT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUAL() { return GetToken(bicepParser.EQUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public OutputContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_output; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOutput(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OutputContext output() {
		OutputContext _localctx = new OutputContext(Context, State);
		EnterRule(_localctx, 4, RULE_output);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			Match(OUTPUT);
			State = 66;
			identifier();
			State = 67;
			type();
			State = 68;
			Match(EQUAL);
			State = 69;
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TargetScopeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TARGETSCOPE() { return GetToken(bicepParser.TARGETSCOPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUAL() { return GetToken(bicepParser.EQUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ScopeContext scope() {
			return GetRuleContext<ScopeContext>(0);
		}
		public TargetScopeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_targetScope; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTargetScope(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TargetScopeContext targetScope() {
		TargetScopeContext _localctx = new TargetScopeContext(Context, State);
		EnterRule(_localctx, 6, RULE_targetScope);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			Match(TARGETSCOPE);
			State = 72;
			Match(EQUAL);
			State = 73;
			scope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScopeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StringValueContext stringValue() {
			return GetRuleContext<StringValueContext>(0);
		}
		public ScopeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scope; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScope(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScopeContext scope() {
		ScopeContext _localctx = new ScopeContext(Context, State);
		EnterRule(_localctx, 8, RULE_scope);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			stringValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARAM() { return GetToken(bicepParser.PARAM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DecoratorContext[] decorator() {
			return GetRuleContexts<DecoratorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DecoratorContext decorator(int i) {
			return GetRuleContext<DecoratorContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUAL() { return GetToken(bicepParser.EQUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_param; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParam(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParamContext param() {
		ParamContext _localctx = new ParamContext(Context, State);
		EnterRule(_localctx, 10, RULE_param);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ET) {
				{
				{
				State = 77;
				decorator();
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 83;
			Match(PARAM);
			State = 84;
			identifier();
			State = 85;
			type();
			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EQUAL) {
				{
				State = 86;
				Match(EQUAL);
				State = 87;
				value();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DecoratorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ET() { return GetToken(bicepParser.ET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueExpressionContext valueExpression() {
			return GetRuleContext<ValueExpressionContext>(0);
		}
		public DecoratorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decorator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecorator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DecoratorContext decorator() {
		DecoratorContext _localctx = new DecoratorContext(Context, State);
		EnterRule(_localctx, 12, RULE_decorator);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			Match(ET);
			State = 91;
			valueExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(bicepParser.IDENTIFIER, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifierContext identifier() {
		IdentifierContext _localctx = new IdentifierContext(Context, State);
		EnterRule(_localctx, 14, RULE_identifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OBJECT() { return GetToken(bicepParser.OBJECT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(bicepParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL() { return GetToken(bicepParser.BOOL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ARRAY() { return GetToken(bicepParser.ARRAY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(bicepParser.INT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 16, RULE_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << BOOL) | (1L << INT) | (1L << ARRAY) | (1L << OBJECT))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ResourceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RESOURCE() { return GetToken(bicepParser.RESOURCE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ResourceTypeContext resourceType() {
			return GetRuleContext<ResourceTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUAL() { return GetToken(bicepParser.EQUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ObjectValueContext objectValue() {
			return GetRuleContext<ObjectValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXISTING() { return GetToken(bicepParser.EXISTING, 0); }
		public ResourceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_resource; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitResource(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ResourceContext resource() {
		ResourceContext _localctx = new ResourceContext(Context, State);
		EnterRule(_localctx, 18, RULE_resource);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			Match(RESOURCE);
			State = 98;
			identifier();
			State = 99;
			resourceType();
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EXISTING) {
				{
				State = 100;
				Match(EXISTING);
				}
			}

			State = 103;
			Match(EQUAL);
			State = 104;
			objectValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ResourceTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StringValueContext stringValue() {
			return GetRuleContext<StringValueContext>(0);
		}
		public ResourceTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_resourceType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitResourceType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ResourceTypeContext resourceType() {
		ResourceTypeContext _localctx = new ResourceTypeContext(Context, State);
		EnterRule(_localctx, 20, RULE_resourceType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			stringValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModulePathContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StringValueContext stringValue() {
			return GetRuleContext<StringValueContext>(0);
		}
		public ModulePathContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modulePath; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModulePath(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModulePathContext modulePath() {
		ModulePathContext _localctx = new ModulePathContext(Context, State);
		EnterRule(_localctx, 22, RULE_modulePath);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			stringValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ValueExpressionContext valueExpression() {
			return GetRuleContext<ValueExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StringValueContext stringValue() {
			return GetRuleContext<StringValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberValueContext numberValue() {
			return GetRuleContext<NumberValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BoolValueContext boolValue() {
			return GetRuleContext<BoolValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArrayValueContext arrayValue() {
			return GetRuleContext<ArrayValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectValueContext objectValue() {
			return GetRuleContext<ObjectValueContext>(0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(Context, State);
		EnterRule(_localctx, 24, RULE_value);
		try {
			State = 116;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 110;
				valueExpression();
				}
				break;
			case OPEN_STRING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 111;
				stringValue();
				}
				break;
			case NUMBER:
				EnterOuterAlt(_localctx, 3);
				{
				State = 112;
				numberValue();
				}
				break;
			case BOOLEAN:
				EnterOuterAlt(_localctx, 4);
				{
				State = 113;
				boolValue();
				}
				break;
			case OPENSQUARE:
				EnterOuterAlt(_localctx, 5);
				{
				State = 114;
				arrayValue();
				}
				break;
			case OPENGRAPH:
				EnterOuterAlt(_localctx, 6);
				{
				State = 115;
				objectValue();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionContext function() {
			return GetRuleContext<FunctionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode POINT() { return GetToken(bicepParser.POINT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueExpressionContext valueExpression() {
			return GetRuleContext<ValueExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		public ValueExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_valueExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IbicepParserVisitor<TResult> typedVisitor = visitor as IbicepParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValueExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueExpressionContext valueExpression() {
		ValueExpressionContext _localctx = new ValueExpressionContext(Context, State);
		EnterRule(_localctx, 26, RULE_valueExpression);
		try {
			State = 128;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 118;
				function();
				State = 119;
				Match(POINT);
				State = 120;
				valueExpression();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 122;
				variable();
				State = 123;
				Match(POINT);
				State = 124;
				valueExpression();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 126;
				function();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 127;
				variable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
